# E2E-ML-Proj

./: .gitignore  Agenda.txt  Information.txt  README.md  pyproject.toml  requirements.txt  setup.py
notebook/: 1 . EDA STUDENT PERFORMANCE .ipynb  2. MODEL TRAINING.ipynb
notebook/catboost_info/: catboost_training.json  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py
